feat: load spare parts from postgres and external providers
